# Haskell-University

./: Lab001.md  Lab002.md  Lab003.md  Lab004.md  Lab005.md  Library.md  README.md
exercise1/: LICENSE  README.md  exercise1.cabal  stack.yaml
exercise1/app/: Main.hs
exercise1/src/: Lib.hs  Program1.hs  Program2.hs  Program3.hs
exercise2/: .gitignore  LICENSE  README.md  exercise2.cabal
exercise2/app/: Main.hs
exercise2/src/: Lib.hs
