name:                exercise2
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/fkowal/exercise2#readme
license:             BSD3
license-file:        LICENSE
author:              Maciej Kowalski
maintainer:          f.kowal@gmail.com
copyright:           2017 Maciej Kowalski
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/fkowal/exercise2#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable exercise2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exercise2
  default-language:    Haskell2010

test-suite exercise2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , exercise2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fkowal/exercise2
